cmake_minimum_required(VERSION 3.26)
project(cpp_excercises)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_excercises main.cpp)
add_executable(lab1 lab1.cpp)
add_executable(lab1.1 lab1.1.cpp)
add_executable(lab2.1
        lab2.1.cpp)
add_executable(lab2.2
        lab2.2.cpp)
add_executable(lab3.1
        lab3.1.cpp)
add_executable(lab3.2
        lab3.2.cpp)
add_executable(lab4
        lab4.cpp)
add_executable(learning_stream
        learning_stream.cpp)
add_executable(lab5
        lab5.cpp)
add_executable(learning_dynamic_memory
        learning_dynamic_memory.cpp)
add_executable(weaker_ptr
        learning_weaker_ptr.cpp)